[workspace.package]
description = "Converts Nix-tracing tool output into CycloneDX"
version = "0.1.0"
edition = "2021"
authors = ["Tweag I/O"]
license = "MIT"
repository = "https://github.com/Tweag/genealogos"
keywords = ["nix", "cyclonedx", "conversion"]
readme = "README.md"

[workspace]
members = ["genealogos", "genealogos-cli", "genealogos-api"]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.4.14", features = ["derive"] }
log = "0.4"
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-cyclonedx = "0.8"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4"] }

env_logger = "0.10"
predicates = "3.1"
pretty_assertions = "1.4"
test-log = "0.2"
urlencoding = "2.1"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.7.2"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin"]
# Publish jobs to run in CI
pr-run-mode = "plan"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
