[workspace.package]
description = "Converts Nix-tracing tool output into CycloneDX"
version = "1.0.0"
edition = "2021"
authors = ["Tweag I/O"]
license = "MIT"
repository = "https://github.com/Tweag/genealogos"
keywords = ["nix", "cyclonedx", "conversion"]
readme = "README.md"

[workspace]
members = ["genealogos", "genealogos-cli", "genealogos-api"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.81"
chrono = "0.4.34"
clap = { version = "4.4.14", features = ["derive"] }
clap-verbosity-flag = "2.1.2"
env_logger = "0.11.1"
indicatif = "0.17.8"
indicatif-log-bridge = "0.2.2"
cyclonedx-bom = "0.5.0"
log = "0.4.20"
rayon = "1.8.1"
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
thiserror = "1.0.57"
uuid = { version = "1.7.0", features = ["v4"] }

# Non-crates.io dependencies
nixtract.git = "https://github.com/tweag/nixtract.git"
genealogos.path = "./genealogos"

# Test dependencies
predicates = "3.1.0"
pretty_assertions = "1.4.0"
test-log = "0.2.14"
urlencoding = "2.1.3"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.28"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
]
# Publish jobs to run in CI
pr-run-mode = "plan"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
