[workspace.package]
description = "Converts Nix-tracing tool output into CycloneDX"
version = "1.1.0"
edition = "2021"
authors = ["Tweag I/O"]
license = "MIT"
repository = "https://github.com/Tweag/genealogos"
keywords = ["nix", "cyclonedx", "conversion"]
readme = "README.md"

[workspace]
members = ["genealogos", "genealogos-cli", "genealogos-api"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
env_logger = "0.11.10"
indicatif = "0.18.4"
indicatif-log-bridge = "0.2.3"
cyclonedx-bom = "0.8.1"
log = "0.4.29"
rayon = "1.12.0"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
uuid = { version = "1.23.1", features = ["v4"] }

# Non-crates.io dependencies
nixtract.git = "https://github.com/tweag/nixtract.git"
genealogos.path = "./genealogos"

# Test dependencies
predicates = "3.1.4"
pretty_assertions = "1.4.1"
test-log = "0.2.20"
urlencoding = "2.1.3"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
