[package]
name = "genealogos-api"
description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true

[[bin]]
name = "genealogos-api"
path = "src/main.rs"

[dependencies]
chrono.workspace = true
genealogos = { workspace = true, features = [ "rocket" ] }
log.workspace = true
nixtract.workspace = true
rocket.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
env_logger.workspace = true
test-log.workspace = true
log.workspace = true
serde_json.workspace = true
serde.workspace = true
urlencoding.workspace = true
pretty_assertions.workspace = true

[features]
default = [ "frontend" ]

# This feature should be enabled when running tests in a Nix environment.
# It disables all tests that require a working internet connection.
nix = []

# Enabling this feature makes Genealogos server a gui frontend at IP:PORT/
frontend = []
