[package]
name = "genealogos-cli"
description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true

[[bin]]
name = "genealogos"
path = "src/main.rs"

[dependencies]
clap.workspace = true
genealogos.path = "../genealogos"
