[package]
name = "genealogos-cli"
description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true

[[bin]]
name = "genealogos"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap-verbosity-flag.workspace = true
env_logger.workspace = true
indicatif.workspace = true
indicatif-log-bridge.workspace = true
genealogos.path = "../genealogos"
nixtract.workspace = true
