[package]
name = "genealogos"
description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true

[dependencies]
clap.workspace = true
cyclonedx-bom.workspace = true
log.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

nixtract.workspace = true

# If the `rocket` feature is enabled, `FromForm` will be derived for `cyclonedx::Version`
rocket = { workspace = true, optional = true }

[dev-dependencies]
env_logger.workspace = true
predicates.workspace = true
test-log.workspace = true
pretty_assertions.workspace = true

[features]
default = []

# This feature should be enabled when running tests in a Nix environment.
# It disables all tests that require a working internet connection.
nix = []

# The messages function of the `BanendHandle` trait violates object safety.
# For those users of the library that want to use this trait as an object, the following feature ensures this is possible.
backend_handle_object = []
