[package]
name = "genealogos"
description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true

[dependencies]
clap = { workspace = true, optional = true }
cyclonedx-bom.workspace = true
log.workspace = true
rayon.workspace = true
rocket = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

nixtract.workspace = true

[dev-dependencies]
env_logger.workspace = true
predicates.workspace = true
test-log.workspace = true
pretty_assertions.workspace = true

[features]
default = []

# This feature should be enabled when running tests in a Nix environment.
# It disables all tests that require a working internet connection.
nix = []

clap = [ "args", "dep:clap" ]
rocket = [ "args", "dep:rocket" ]

# Enables the `genealogos::args` module, it is typically best to pick either
# the `clap` or `rocket` features instead, which automatically enable this feature
# as well. However, if you only need access to the types in this module, use this feature instead.
args = []
